created compile() & cleanUP() & run() method stub.